erDiagram
  INGRESOS }o..o{ CDP : "RECURSO = FONDO"
  CDP ||--o{ COMPROMISO : "VIGENCIA + NRODOC_CDP"
  CDP ||--o{ ORDEN_GASTO : "VIGENCIA + CDP"
  COMPROMISO ||--o{ ORDEN_GASTO : "VIGENCIA + COMPROMISO"
  COMPROMISO ||--o{ OBLIGACION : "VIGENCIA + NRO_RP"
  ORDEN_GASTO ||--o{ OBLIGACION : "VIGENCIA + NRO_ORDEN_GASTO"
  CDP ||--o{ RESERVA : "VIGENCIA-1 + NUMERO_CDP"
  INGRESOS {
    int VIGENCIA PK
    int NRO_COMPROBANTEPPTAL PK
    int RUBRO_ID
    str RUBRO
    str NOMBRERUBRO
    str TIPO_COMPPTAL
    int ID_CENTROCOSTO
    int RECURSO FK
    str ACTO_ADMINISTRATIVO
    date FECHA_ACTO_ADMIN
    str TIPO_ACTO
    int NRODOC
    num VALOR
    num CARGOS
    num SALDO
    date FECHA
    str TIPO_PPTO
    str CONCEPTO
    str TIPODOCUMENTO
    int DOCUMENTO
    str NOMBRE_DOCUMENTO
  }
  CDP {
    int VIGENCIA PK
    int NRO_CDP PK
    str IDENTIFICACION_PRESUPUESTAL PK
    int FONDO PK
    int ID_CENTROCOSTO
    str SOLICITANTE
    str NOMBRE_RUBRO
    str NOMBRE_FONDO
    str TIPO_RAIZ
    date FECHA_DISP
    str OBJETO_CERT
    num VALOR_CERTIFICADO
    num VALOR_DISPONIBILIDAD_DEF
    num VALOR_COMPROMISOS
    num SALDO_CERTF
    num OBLIGACIONES
    num PAGOS
    str PROYECTO
  }
  COMPROMISO {
    int VIGENCIA PK
    int NRO_RP PK
    str IDENTIFICACION_PRESUPUESTAL PK
    int FONDO PK
    int NRODOC_CDP FK
    str TIPO_RAIZ
    int CCOSTO
    str SOLICITANTE
    str NOMBRE_RUBRO
    str NOMBRE_FONDO
    date FECHA_REG
    str ACTO_ADMON
    str PROYECTO
    num VALOR_REGISTRO
    num VALOR_COMPROMISO_DEF
    num SALDO_RP
    num OBLIGACIONES
    num PAGOS
  }
  ORDEN_GASTO {
    int VIGENCIA PK
    str PREFIJO PK
    int NRO_CONTRATO PK
    int COMPROMISO PK, FK
    int CDP FK
    str TIPO_CONTRATO
    str TIPO_IDENTIFICACION
    str ESTADO
    str MODALIDAD
    str TERCERO
    str NOMBRE_TERCERO
    str DESCRIPCION
    int ID_CENTROCOSTO
    str NOMBRE_CENTRO_COSTO
    date FECHA_FIRMA
    date FECHA_INICIO
    date FECHA_FINAL
    str VALIDADO_TRIBUTARIA
    str DURACION
    int DURACION_DIAS
    str DECODE_CONTRATO_DURACION_FIDUC
    str INTERVENTORIA
    str FORMA_PAGO
    date FECHA_LIQUIDACION
    str OBLIGACIONES_PENDIENTES
    str ACTA_LIQUIDACION
    num VALOR
    num IVA
    num TOTAL
    num VALOR_CDP
    date FECHA_CDP
    int SOLICITUD_COMP
    date FECHA_SOLI_COMP
    date FECHA_COMPROMISO
    str NOMBRERECURSO1
    str NOMBRE_ARTICULO1
    num VALOR_ART1
  }
  OBLIGACION {
    int VIGENCIA PK
    int NRO_OBLIGACION PK
    str IDENTIFICACION_PRESUPUESTAL PK
    int FONDO PK
    int NRO_RP FK
    int NRO_ORDEN_GASTO FK
    str PREFIJO_ORDEN
    str TIPO_ORDEN_GASTO
    int ORDEN_PAGO
    str TIPO_RAIZ
    str NOMBRE_RUBRO
    str NOMBRE_FONDO
    date FECHA_OBLI
    int CCOSTO
    str NOMBRE_CCOSTO
    num VALOR_OBLIGACION
    num VALOR_OBLI_DEF
    num SALDO_OBLI
    num PAGOS
    str PROYECTO
  }
  RESERVA {
    int VIGENCIA PK
    int NRO_RESERVA PK
    str IDENTIFICACION_PRESUPUESTAL PK
    int FONDO PK
    int VIGENCIA_ORIGEN FK
    int NUMERO_CDP FK
    date FECHA_CDP
    str NIT_COMPANIA
    str TIPO_RESERVA
    str TIPO_RUBRO
    str NOMBRE_RUBRO
    str NOMBRE_FONDO
    int FUENTE_FINANCIACION
    str NOMBRE_FUENTE_FINAN
    date FECHA_RESERVA
    int CCOSTO
    str SOLICITANTE
    str ACTO_ADMON
    str NIT
    str BENEFICIARIO
    str OBJETO_RESERVA
    num VALOR_RESERVA
    num VALOR_RESERVA_DEF
    num SALDO_RESERVA
    num OBLIGACIONES_RESERVA
    num PAGOS_RESERVA
    str PROYECTO
  }
